--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-i18next": "^11.15.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.8"
   }
 }
